#4 Voice input functionality

--- a/radarbot/Info.plist
+++ b/radarbot/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>Se usa para ingresar la descripción de la alerta</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Se usa para ingresar la descripción de la alerta</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Se usa para presentar el mapa cerca de donde estés</string>
 	<key>UIApplicationSceneManifest</key>
